welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:18: error: ';' expected but 'else' found.
	else {x = x+1; y = y-1;}
        ^Diagonal:35: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:38: error: expected start of definition
	override def forward()  {
                 ^Diagonal:41: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:44: error: expected start of definition
	override def backward() {
                 ^Diagonal:47: error: Unmatched closing brace '}' ignored here
}
^